--- a/src/App.css
+++ b/src/App.css
@@ -68,8 +68,9 @@
 .App-content .box {
   display: flex;
   align-items: center;
-  height: 140px;
+  min-height: 140px;
   border-bottom: 2px solid #282c34;
+  padding: 10px 0;
 }
 
 .App-content .box .thumb {
@@ -82,7 +83,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 100px;
+  min-height: 100px;
 }
 
 .App-content .box .infos h3, p, span, label {
@@ -91,6 +92,16 @@
 
 .App-content .box span {
   color: #ff7b00;
+}
+
+.App-content .ver-mais {
+  height: 40px;
+  width: 100%;
+  border: 0;
+  background-color: #282c34;
+  color: #ffffff;
+  margin: 10px 0;
+  cursor: pointer;
 }
 
 @keyframes App-logo-spin {
