--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,11 @@
   border-bottom: 2px solid #282c34;
 }
 
-.App-options button {
+.App-options a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
   background-color: #282c34;
   color: #ffffff;
   border: 0;
@@ -47,7 +51,15 @@
   border-radius: 5px;
 }
 
-.App-options button:nth-of-type(2) {
+.App-options a:focus {
+  background-color: #ff7b00 !important;
+}
+
+.App-options a:hover {
+  background-color: #ff7b00 !important;
+}
+
+.App-options a:nth-of-type(2) {
   margin: 0 10px;
 }
 
